# cmake-example

./: .gitignore  CMakeLists.txt  PersonApp  build.sh
include/: Animal.hpp  Person.hpp
src/: Animal.cpp  Person.cpp  main.cpp
